# pi-pico-hot-plate

./: .gitmodules  CMakeLists.txt
src/: b1g_font.h  main.cpp
src/b1g/pid/: pid.cpp  pid.hpp
src/b1g/sensor/: MAX31855.cpp  MAX31855.hpp
src/b1g/utz/: utz.c  utz.h  zones.c  zones.h
